pxc/tests/test_001_px/constmet6.px
import core::common -;

public namespace constmet6;

struct foo {
        int x;
        function int n(int y) {
                int oldx = x;
                x = y;
                return oldx;
        }
        function int m(int y) const {
                return n(y); // error
        }
}

ptr{foo} v = foo(10);
println(v->m(20));

